feat(PrintReceiptDialog): FilteredList 적용하여 삭제된 영수증(DELETED) 목록에서 제외
[개발 내용]
- receiptItemsTableView에서 status가 "DELETED"인 SaleModel을 자동으로 필터링하여 표시하지 않음
- SalesViewModel에 FilteredList 도입 및 필드 선언 시 초기화

[변경 사항]
1. SalesViewModel.java
   - filteredSalesList 필드 추가 (FilteredList<SaleModel>)
   - 필터 조건: status != "DELETED" (대소문자 무시)
   - getFilteredSalesList(), refreshFilteredList() 메서드 추가

2. PrintReceiptDialogController.java
   - receiptItemsTableView에 filteredSalesList 바인딩 (원본 salesList 대체)
   - selectFirstReceiptAfterLoad()에서 filteredSalesList 기준으로 첫 항목 선택
   - selectionListener에서 DELETED 상태 체크 로직 추가